# psleak

./: DEVNOTES.md  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  psleak.py  pyproject.toml  setup.py
.github/workflows/: bsd.yml  tests.yml
psleak/: __init__.py
tests/: __init__.py  build_ext.py  cutils.py  test_base.py  test_c_leaks.py  test_ext.c  test_interface.py  test_python_leaks.py
